Mon Sep  3 20:26:08 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* intern.h (rb_find_file_ext): changed from rb_find_file_noext().

Mon Sep  3 14:38:24 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* eval.c (rb_f_require): should check static linked libraries
	  before raising exception(from 1.7).

Mon Sep  3 14:17:17 2001  Akinori MUSHA  <knu@iDaemons.org>

	* error.c: unbreak the build on *BSD with gcc 3.0.1 by removing
	  the conflicting declaration of sys_nerr for *BSD.

Sat Sep  1 09:50:54 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ruby.c (set_arg0): prevent SEGV when val is longer than the
	  original arguments.

	* ruby.c (ruby_process_options): initialize total length of
	  original arguments at first.

Sat Sep  1 03:49:11 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_popen): accept integer flags as mode.

Fri Aug 31 19:46:05 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* file.c (rb_find_file_ext): extension table can be supplied from
	  outside.  renamed.

	* eval.c (rb_f_require): replace rb_find_file_noext by
	  rb_find_file_ext.

Fri Aug 31 19:26:55 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_provided): should also check feature without
	  extension.

Fri Aug 31 13:06:33 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (flo_to_s): do not rely on decimal point to be '.'

Wed Aug 29 02:18:53 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (yylex): ternary ? can be followed by newline.

Mon Aug 27 07:32:23 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* dir.c (rb_glob_helper): merge from 1.7: traversed files twice
	  with pattern "*/**".  don't descend to non-existing directories.

Fri Aug 24 15:17:40 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_equal): check identiry equality first.

	* string.c (rb_str_equal): ditto.

	* struct.c (rb_struct_equal): ditto.

Fri Aug 24 14:45:26 2001  Usaku Nakamura  <usa@ruby-lang.org>
