@@ -1,4 +1,4 @@
-#define RUBY_VERSION "1.6.4"
-#define RUBY_RELEASE_DATE "2001-09-03"
-#define RUBY_VERSION_CODE 164
-#define RUBY_RELEASE_CODE 20010903
+#define RUBY_VERSION "1.6.5"
+#define RUBY_RELEASE_DATE "2001-09-05"
+#define RUBY_VERSION_CODE 165
+#define RUBY_RELEASE_CODE 20010905
